--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Miguel-ezh/dota-viewer#readme",
   "dependencies": {
+    "http-server": "^0.8.5",
     "jspm": "^0.16.29"
   },
   "jspm": {
