--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "angular": "github:angular/bower-angular@^1.5.0",
       "angular-animate": "github:angular/bower-angular-animate@^1.5.0",
       "angular-messages": "github:angular/bower-angular-messages@^1.5.0",
+      "fetch": "github:github/fetch@^0.11.0",
       "ui-router": "npm:ui-router@^0.2.15"
     },
     "devDependencies": {
